Fix to toList()